[package]
name = "code_diff"
version = "0.1.0"
authors = ["Ethan Spurlock <ethan@spurlock.io>"]
edition = "2018"

[dependencies]
tree-sitter = "0.3.10"
tree-sitter-javascript = { git = "https://github.com/racer161/tree-sitter-javascript" }
unicode-segmentation = "1.6.0"
regex = "1"
lazy_static = "1.4.0"
wasm-bindgen = "0.2.58"
wasm-bindgen-test = "0.3.8"

[build-dependencies]
cc = "1.0"
